--- a/wp-content/themes/example-theme/style.css
+++ b/wp-content/themes/example-theme/style.css
@@ -1,15 +1,8 @@
 /*
 Theme Name: Example Theme
-Theme URI: https://example.com
-Author: Your Name
-Author URI: https://example.com
-Description: A brief description of your theme
-Version: 1.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: some tags separated by commas
 Text Domain: example-theme
 */
+
 * {
     box-sizing: border-box;
 }
@@ -35,32 +28,42 @@ main {
 
 aside {
     width: 100%;
-    padding: 2rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
-    box-shadow: inset 0 0 5px #9f9f9f, 0 0 5px #9f9f9f;
     border-radius: 6px;
 }
 
 aside a {
     color: #fff;
     text-decoration: none;
-    display: block;
-    margin-bottom: 1rem;
+    padding: 1rem;
+    background-color: #111111;
+    white-space: nowrap;
+    margin-left: 0.5rem;
+    border-radius: 6px;
+}
+
+aside .search {
+    padding: 1rem;
+    border: #333 1px solid;
+    border-radius: 6px;
 }
 
 footer {
     background-color: #333;
     color: #fff;
     padding: 1rem;
-    margin-top: 2rem;
+    margin: 2rem 0;
     text-align: center;
     width: 100%;
-    background-image: url('wave2.svg');
+    background-image: url('img/wave2.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
 
 .container {
     max-width: 1200px;
@@ -82,7 +85,7 @@ footer {
 .header-top-left,
 .header-top-right {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     width: 100%;
 }
 
@@ -103,6 +106,10 @@ footer {
     white-space: nowrap;
     margin-left: 0.5rem;
     border-radius: 6px;
+}
+
+.current-menu-item a {
+    background-color: #666 !important;
 }
 
 .hero {
@@ -132,7 +139,7 @@ footer {
 
 .products {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
@@ -149,9 +156,63 @@ footer {
     object-fit: cover;
 }
 
+.all {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
+}
+
+.all a {
+    color: #fff;
+    text-decoration: none;
+    padding: 1rem;
+    background-color: #111111;
+    white-space: nowrap;
+    margin-left: 0.5rem;
+    border-radius: 6px;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.single {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: #fff;
+    margin: 0.5rem;
+    border-radius: 6px;
+}
+
+.single img {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    object-fit: cover;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+}
+
+.breadcrumbs {
+    margin-bottom: 1rem;
+    width: 100%;
+    padding-left: 1rem;
+}
+
+.breadcrumbs a {
+    color: #8375ef;
+    text-decoration: none;
+}
+
 @media (min-width: 768px) {
+    .container {
+        padding: 0;
+    }
+
     main {
         width: 75%;
+        margin: 0 auto;
     }
 
     aside {
@@ -160,11 +221,14 @@ footer {
         margin-bottom: 2rem;
     }
 
+    .page-header {
+        width: 100%;
+    }
+
     .header-top-left,
     .header-top-right {
         display: flex;
         align-items: center;
-        margin-bottom: 2rem;
         width: auto;
     }
 
@@ -172,8 +236,18 @@ footer {
         height: auto;
     }
 
+    .hero img {
+        max-width: 1200px;
+        height: 400px;
+        object-fit: cover;
+    }
+
     .product {
         flex: 0 0 calc(33.333% - 2rem);
-        margin-right: 2rem;
+    }
+
+    .single {
+        padding: 2rem 4rem;
+        margin: 2rem 0;
     }
 }
